@@ -2,6 +2,7 @@ Changelog:
 
 3.7
 - You can now search on the "Quests" and "Items" tab. You can search for a lot of fields. Let us know if you find any issues with this!
+- Fixed UI Layout - Tabs now properly align with the frame border, and the scroll content now fully fills out the frame, so more stuff is visible
 
 3.6
 - You can now rightclick on quests in the "Questlog" tab to move quests between "Questlog" and "Optional". Please let us know if you find any issues with this!
